# PLoM-surrogate

./: .gitignore  README.md  pyproject.toml
examples/: example_cantilever_beam.py  example_sinc.py
scripts/: example_cantilever_beam.py  example_sinc.py  main.py  main_parallel.py
src/PLoM_surrogate/: data.py  dmaps.py  generators.py  models.py
