[build-system]
requires = [
    "setuptools>=80.9.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "PLoM-surrogate"
version = "0.3.0"
authors = [
    { name = "Rémi Capillon" },
]
description = "Tools for constructing a surrogate model for a stochastic numerical model using Probabilistic Learning on Manifolds"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy >= 2.3.2",
    "scipy >= 1.16.1",
    "matplotlib >= 3.10.3",
    "pandas >= 2.3.1",
    "kdetools >= 0.2.3",
    "dill >= 0.4.0",
    "tqdm >= 4.67.1",
]

[project.urls]
"Homepage" = "https://github.com/rcapillon/PLoM-surrogate"
